Creation navbar et product-list component - Angular Material

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias blanditiis, sed. Accusantium consectetur dolore error laborum magni quae sint velit, voluptatem? Aspernatur illo libero nostrum nulla, praesentium reprehenderit sunt voluptatibus.</p>
 </body>
 </html>
